@startuml DER-Incentivos
hide circle
skinparam linetype ortho

note as db_note
  **Esquema:** incentivos
  **Motor:** PostgreSQL
end note

entity "PerfilDonante" as PerfilDonante {
  [PK] perfil_donante_id
  --
  categoria : VARCHAR(50)
  --
  [FK] mision_actual_id
}

entity "Insignia" as Insignia {
  [PK] insignia_id
  --
  nombre : VARCHAR(255)
  --
  descripcion : VARCHAR(255)
}

entity "InsigniaObtenida" as InsigniaObtenida {
  [PK] insignia_obtenida_id
  --
  [FK] perfil_donante_id
  --
  [FK] insignia_id
  --
  fecha_obtencion : DATE
  --
  visible_publicamente : BOOLEAN
}

entity "Mision" as Mision {
  [PK] mision_id
  --
  nombre : VARCHAR(255)
  --
  [FK] recompensa_insignia_id
  --
  tipo_metrica : VARCHAR(50)
  --
  objetivo : INTEGER
  --
  orden_ejecucion : INTEGER
}

entity "ProgresoMision" as ProgresoMision {
  [PK] progreso_mision_id
  --
  [FK] perfil_donante_id
  --
  [FK] mision_id
  --
  progreso_actual : INTEGER
  --
  estado : VARCHAR(50)
  --
  mes_completada : VARCHAR(20)
}

entity "MetricasDonante" as MetricasDonante {
  [PK] metricas_donante_id
  --
  [FK] perfil_donante_id
  --
  total_donaciones_historicas : INTEGER
  --
  organizaciones_ayudadas : INTEGER
}

entity "RegistroDonacion" as RegistroDonacion {
  [PK] registro_donacion_id
  --
  [FK] metricas_donante_id
  --
  id_donacion_origen : UUID
  --
  cantidad_bienes : INTEGER
  --
  categorias : TEXT
  --
  id_entidad_beneficiaria_origen : UUID
  --
  mes_donacion : VARCHAR(20)
}

entity "RankingMensual" as RankingMensual {
  [PK] ranking_mensual_id
  --
  mes : VARCHAR(20)
  --
  anio : INTEGER
}

entity "PosicionRanking" as PosicionRanking {
  [PK] posicion_ranking_id
  --
  [FK] ranking_mensual_id
  --
  [FK] perfil_donante_id
  --
  posicion : INTEGER
  --
  misiones_completadas_mes : INTEGER
}

' Relaciones
PerfilDonante ||--o{ InsigniaObtenida 
Insignia ||--o{ InsigniaObtenida 

PerfilDonante ||--o{ ProgresoMision 
Mision ||--o{ ProgresoMision 
Mision ||--|| Insignia 

PerfilDonante ||--|| MetricasDonante 
MetricasDonante ||--o{ RegistroDonacion 

RankingMensual ||--o{ PosicionRanking 
PerfilDonante ||--o{ PosicionRanking 

@enduml